// Copyright 2019 Tencent Cloud authors.
//
// You may not use this file outside of Tencent Cloud project.

syntax = "proto3";
package api;

import "api/rpc_common.proto";

// The interface of HelloTencent RPC Stub
// Currently, we support six fundamental rpc stubs as bellow:
// 1: HelloTencent
//
// +-----+--------------+----------------------------------------------+
// | No. |      Stub    |                 Description                  |
// +-----+--------------+----------------------------------------------+
// |  1  | HelloTencent | TODO                                         |
// +-----+--------------+----------------------------------------------+
service HelloTencentService {
    // HelloTencent Stub
    rpc HelloTencent(HelloTencentRequest) returns (HelloTencentResponse);
}

message HelloTencentRequest {
    RequestHeader header = 1;
    string message = 2;
}

message HelloTencentResponse {
    ResponseHeader header = 1;
    string message = 2;
}
