// Copyright 2019 Tencent Cloud authors.
//
// You may not use this file outside of Tencent Cloud project.

syntax = "proto3";
package api;

enum RetCode {
    // Please do not modify bellow error codes!!!
    OK = 0;
    FAIL = 1;
    ERROR = 2;
    // TODO, more error code needs to be defined
}

message RequestHeader {
    string request_id = 1;
    uint64 start_time = 2;
}

message ResponseHeader {
    string request_id = 1;
    uint64 resp_time = 2;
    RetCode ret_code = 3;
    string err_msg = 4;
    map<string, string> params = 5;
}

message TracingInfo {
    // TODO
}

message RequestContext {
    // TODO
}

message DigestPb {
    string md5_hex = 1;
}

message EventDataPb {
    // TODO
}
